--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,8 @@
   },
   "husky": {
     "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn run type-check"
     }
   },
   "lint-staged": {
