--- a/cloud-functions/package.json
+++ b/cloud-functions/package.json
@@ -13,6 +13,6 @@
     "@google-cloud/functions-framework": "^1.8.0"
   },
   "dependencies": {
-    "@google-cloud/datastore": "^6.4.1"
+    "@google-cloud/firestore": "^4.12.3"
   }
 }
