--- a/cloud-functions/package.json
+++ b/cloud-functions/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@google-cloud/firestore": "^4.12.3",
     "firebase-admin": "^9.9.0",
+    "jsdom": "^16.6.0",
+    "node-fetch": "^2.6.1",
     "twitter-v2": "^1.1.0"
   }
 }
