--- a/batch/Dockerfile
+++ b/batch/Dockerfile
@@ -8,4 +8,6 @@ RUN npm install --only=production
 
 COPY . ./
 
+ENV GOOGLE_APPLICATION_CREDENTIALS /usr/src/app/sa.json
+
 CMD [ "node", "src/index.js" ]
