--- a/batch/package.json
+++ b/batch/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^4.12.3",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "jsdom": "^16.6.0",
     "node-fetch": "^2.6.1",
     "twitter-v2": "^1.1.0"
